# eventrouter

./: .clang-format  LICENSE  README.md  eventrouter.c  eventrouter.h
.github/workflows/: build-example.yml  pull-request-acceptance.yml
eventrouter/internal/: atom_lock.h  atomic.h  bitref.h  checked_config.h  defs.h  event.h  event_handler.h  event_type.h  eventrouter_baremetal.c  eventrouter_baremetal.h  eventrouter_freertos.c  eventrouter_os.c  eventrouter_posix.c  list.c  list.h  module.h  os_functions.h  os_types.h  os_types_freertos.h  os_types_posix.h  queue.c  queue_.h  queue_freertos.c  queue_posix.c  rtos_functions.h  task_.h
example/: CMakeLists.txt  README.md  eventrouter_config.h  main.c  module_data_logger.c  module_data_logger.h  module_data_uploader.c  module_data_uploader.h  module_sensor_data_publisher.c  module_sensor_data_publisher.h  task_generic.c
example/baremetal/: CMakeLists.txt  eventrouter_config.h  main.c
example/common_modules/: CMakeLists.txt  module_data_logger.c  module_data_uploader.h  module_sensor_data_publisher.c  module_sensor_data_publisher.h
example/freertos/: CMakeLists.txt  FreeRTOSConfig.h  module_data_uploader.c  module_sensor_data_publisher.h  task_generic.c  task_generic.h
extra/: CMakeLists.txt  eventrouter_config.h
extra/cmake/: freertos.cmake  googletest.cmake  repository_root.cmake
extra/example/: CMakeLists.txt  baremetal_eventrouter_example.c  freertos_eventrouter_example.c  module_data_logger.c  module_data_logger.h  module_data_uploader.c  module_sensor_data_publisher.c  posix_eventrouter_example.c  task_generic.c  task_generic.h  task_posix.c  task_posix.h
extra/test/: CMakeLists.txt  baremetal_eventrouter_test.cc  common_eventrouter_test.cc  freertos_eventrouter_test.cc  mock_module.h  mock_options.cc  mock_options.h  mock_os.cc  mock_os.h  mock_rtos.cc  mock_rtos.h  os_eventrouter_test.cc  posix_eventrouter_test.cc
include/eventrouter/: checked_config.h  event.h  event_handler.h  eventrouter.h  eventrouter_internal.h  module_id.h
